# NumericalMethods

./: .gitignore  LICENSE  README.md  function.py  pyproject.toml  solve.py  tests.py  try.py
.github/workflows/: python-publish.yml  tests.yml
docs/: README.md  full_documentation.md
examples/Problem Set 1/: main.py  solution.py
examples/Problem Set 10/: main.py  solution.py
examples/Problem Set 11/: main.py  solution.py
examples/Problem Set 2/: main.py  solution.py
examples/Problem Set 3/: solution.py
examples/Problem Set 4/: main.py  solution.py
examples/Problem Set 5/: main.py  solution.py
examples/Problem Set 6/: solution.py
examples/Problem Set 7/: solution.py
examples/Problem Set 8/: solution.py
examples/Problem Set 9/: solution.py
numericalmethods/: __init__.py  enums.py  function.py  util.py
numericalmethods/functions/: __init__.py  base.py  elementary.py  fem2d.py  multivariate.py
numericalmethods/linalg/: __init__.py  linear_system.py  matrix.py
numericalmethods/ode/: base.py  first_order.py  second_order.py
pysolverkit/: enums.py  util.py
pysolverkit/functions/: __init__.py  base.py  elementary.py  multivariate.py
pysolverkit/linalg/: linear_system.py  vector.py
pysolverkit/ode/: __init__.py  first_order.py
src/numerical_methods/: function.py  main.py  solution.py  util.py
tests/: tests.py
